--- a/components/styles/modules/_footer.scss
+++ b/components/styles/modules/_footer.scss
@@ -34,18 +34,18 @@ footer {
     line-height: 26px;
     text-decoration: none;
     position: relative;
-    left: -15px;
+    // left: -15px;
     &:hover, &.active {
-      &:before {
+      &:after {
         opacity: 100;
       }
     }
-    &:before {
+    &:after {
       content: "\25CF";
       font-size: .55em;
       position: relative;
       opacity: 0;
-      left: -2px;
+      right: -2px;
       top: -2px;
     }
   }
@@ -58,7 +58,7 @@ footer {
     font-size: $size-sans--small;
     grid-column: 1 / 3;
     a {
-      left: -5px;
+      // left: -5px;
     }
     @include respond-up-to('sm') {
       margin-top: var(--gap-3);
